# tabstats

./: CLAUDE_CODE_PROMPT.md  MANIFEST.in  README.md  TODO.md  debug_tabstat.py  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md
.github/workflows/: wiki-sync.yml
docs/: Home.md  api_reference.md  configuration.md  examples.md
examples/: tabstat_demo.py  tabstat_output.html  tabstat_output.xlsx
src/tabstat/: README.md  WIKI.md  __init__.py  config.py  exports.py  generator.py  layouts.py  normality.py  rendering.py  resolver.py
tests/: conftest.py  test_config.py  test_exports.py  test_generator.py  test_normality.py  test_rendering.py  test_resolver.py
