[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabstat"
version = "1.1.1"
description = "Publication-ready Table 1 for clinical and epidemiological research"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Unknown", email = "you@example.com" } ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "tabulate>=0.9",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.0"]
dev   = ["pytest", "build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]
